--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "postinstall": "typings install",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
-    "typings": "typings"
+    "typings": "typings",
+	"build": "webpack",
+    "play": "webpack-dev-server"
   },
   "license": "ISC",
   "dependencies": {
@@ -32,6 +34,9 @@
     "concurrently": "^2.0.0",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
-    "typings": "^0.8.1"
+    "typings": "^0.8.1",
+	"webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1",
+	"ts-loader": "^0.7.2"
   }
 }
