--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "angular2-quickstart",
   "version": "1.0.0",
   "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
-    "lite": "lite-server",
+    "start": "webpack-dev-server",
+    "build": "webpack",
     "postinstall": "typings install",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
-    "typings": "typings",
-	"build": "webpack",
-    "play": "webpack-dev-server"
+    "typings": "typings"
   },
   "license": "ISC",
   "dependencies": {
@@ -27,12 +25,10 @@
     "es6-shim": "^0.35.1",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "systemjs": "^0.19.27",
     "zone.js": "0.6.12"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
-    "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
     "typings": "^0.8.1",
 	"webpack": "^1.12.2",
